Publishing to gh-pages

--- a/index.html
+++ b/index.html
@@ -148,8 +148,8 @@
             <a href="/notes/categories/%E5%B0%8F%E7%BB%BF%E4%B9%A64.0/"> 小绿书4.0 </a>
           
         </div>
-      <span class="more-meta"> 136 words </span>
-      <span class="more-meta"> 1 min read </span>
+      <span class="more-meta"> 219 words </span>
+      <span class="more-meta"> 2 mins read </span>
     </div>
   </header>
   
